test script on live project

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ python:
 script:
 - pip install path.py
 - python -m py_compile clean-deploy.py
+
+success:
+- git clone https://github.com/fossasia/labyrinth target
+- python clean-deploy.py
