--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ python:
   - "3.6"
 
 before_install:
-- sudo apt-get install ffmpeg & ffmpeg -version
+- sudo add-apt-repository ppa:jonathonf/ffmpeg-4
+- sudo apt-get update
+- sudo apt-get install ffmpeg
+- ffmpeg -version
 
 script:
 - pip install path.py
