--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ python:
   - "3.6"
 
 before_install:
-- sudo add-apt-repository ppa:jonathonf/ffmpeg-4
-- sudo apt-get update
-- sudo apt-get install ffmpeg
+- sudo add-apt-repository -y ppa:mc3man/trusty-media;
+- sudo apt-get update;
+- sudo apt-get install -y ffmpeg;
 - ffmpeg -version
 
 script:
