--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ script:
 
 after_success:
 - git clone https://github.com/fossasia/labyrinth target
-- ls -l --block-size=M
+- du -s -m target
 - python clean-deploy.py
-- ls -l --block-size=M
+- du -s -m target
